--- a/css/login.css
+++ b/css/login.css
@@ -10,6 +10,7 @@ body{
 .container{
     width: 100vw;
     height:100vh;
+    min-height: 480px;
     /* height: 12.7rem; */
     background:#29243D url(../img/bg_loginx.png) no-repeat;
     background-size: 100% 100%;
