--- a/css/service.css
+++ b/css/service.css
@@ -263,6 +263,10 @@ body{
 .bao_list img{
     width: 100%;
     height: 100%;
+    display: block;
+}
+.bao_list a:not(:first-child) img{
+    margin: .4rem 0 0 0;
 }
 .icon_bao{
     background: url(../img/bao.png) no-repeat;
